// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading block changes heading level 1`] = `
"<!-- fp:heading {"level":6} -->
<h6 class="fp-block-heading"></h6>
<!-- /fp:heading -->"
`;

exports[`Heading block inserts block 1`] = `
"<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->"
`;

exports[`Heading block should keep the heading when there is an empty paragraph block before and backspace is pressed at the start 1`] = `
"<!-- fp:heading -->
<h2 class="fp-block-heading">A quick brown fox jumps over the lazy dog.</h2>
<!-- /fp:heading -->"
`;

exports[`Heading block should merge with an empty Paragraph block and keep being the Heading block 1`] = `
"<!-- fp:heading -->
<h2 class="fp-block-heading">A quick brown fox jumps over the lazy dog.</h2>
<!-- /fp:heading -->"
`;

exports[`Heading block should set a background color 1`] = `
"<!-- fp:heading {"backgroundColor":"luminous-vivid-orange"} -->
<h2 class="fp-block-heading has-luminous-vivid-orange-background-color has-background">A quick brown fox jumps over the lazy dog.</h2>
<!-- /fp:heading -->"
`;

exports[`Heading block should set a text color 1`] = `
"<!-- fp:heading {"textColor":"pale-pink"} -->
<h2 class="fp-block-heading has-pale-pink-color has-text-color">A quick brown fox jumps over the lazy dog.</h2>
<!-- /fp:heading -->"
`;

exports[`Heading block should transform to a paragraph block when pressing backspace at the beginning of the first heading block 1`] = `
"<!-- fp:paragraph -->
<p>A quick brown fox jumps over the lazy dog.</p>
<!-- /fp:paragraph -->"
`;
